Fixed custom carousel icons not aligning with heading

--- a/assets/less/reece-products.less
+++ b/assets/less/reece-products.less
@@ -431,7 +431,7 @@
 	.carousel-control {
 
 		&.top {
-			top: -40px;
+			top: -45px; //Ensure the controls align with the heading tag as per design.
 		}	
 	}
 }
